# solo-founder-agents

./: .env.example  .gitignore  ARTIFACTS.md  CODE-REVIEW.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  fix_artifact_duplication.py  full_diagnostic.py  pyproject.toml
config/: __init__.py  agents.yaml  settings.py
docs/: AGENTS.md  INFRASTRUCTURE.md  LLM-CONFIG.md  MVP.md
prompts/analyst/: system-prompt.md
prompts/architect/: system-prompt.md
prompts/designer/: system-prompt.md
prompts/developer/: system-prompt.md
prompts/pm/: system-prompt.md
prompts/qa/: system-prompt.md
prompts/reviewer/: system-prompt.md
prompts/tech_writer/: system-prompt.md
scripts/: cleanup_artifacts.py  init_react_native.py  migrate_structure.py  sync_artifacts_to_github.py
src/: __init__.py  cli.py  main.py  pipeline.py
src/agents/: __init__.py  _agent_cache.py  agent_cache.py  analyst.py  architect.py  designer.py  developer.py  factory.py  pm.py  qa.py  reviewer.py  tech_writer.py
src/bot/: __init__.py  telegram.py
src/crews/: __init__.py  analyst_crew.py  architect_crew.py  base.py  core_crew.py  designer_crew.py  dev_crew.py  developer_crew.py  pm_crew.py  qa_crew.py  reviewer_crew.py  tech_writer_crew.py  types.py
src/events/: __init__.py  bus.py  handlers.py
templates/: ADR-item.md  ADR-main.md  design-system.md  github-issue-bug.md  github-issue-feature.md  prd.md  pull-request.md  system-design.md  test-case.md  test-run-log.md  ui-screen.md  user-flow.md
tests/: test_github_tools.py  test_pipeline.py  test_storage.py
(+21 files in other folders)
